feat(arquitetura): elevação da API para a nuvem integrando Amazon RDS como Fonte da Verdade, com governança autônoma via Flyway e auditoria temporal pelo Envers.