@@ -2,7 +2,9 @@ package com.agenda.demo.core.app.usecases;
 
 import com.agenda.demo.core.app.dtos.ContatoDTO;
 import com.agenda.demo.core.domain.repos.ContatoRepository;
+
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ListarContatosUseCase {
 
@@ -14,7 +16,11 @@ public class ListarContatosUseCase {
 
     public List<ContatoDTO> executar() {
         return repository.listarTodos().stream()
-                .map(c -> new ContatoDTO(c.getId(), c.getNome(), c.getEmail().valor()))
-                .toList();
+                .map(contato -> new ContatoDTO(
+                        contato.getId(),
+                        contato.getNome(),
+                        contato.getEmail().valor()
+                ))
+                .collect(Collectors.toList());
     }
 }
